--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -8,15 +8,17 @@ body {
 	box-sizing: border-box;
 }
 
-#menu {
-	height: 30px;
-	border-bottom: 1px solid black;
-	width: 100%;
+.root-2-col {
+    display:flex;
 }
+
+.root-2-col > * {
+    width:200px;
+    padding:1rem;
+}
+
 #app {
 	font-family: Arial, sans-serif;
-	width: 100%;
-	height: calc(100vh - 30px);
 	.note{
 		.tag{
 			background-color: bisque;
